# MaiBot-APIAdapter

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/maibot_llmreq/: __init__.py  exceptions.py  model_manager.py  usage_statistic.py  utils.py
src/maibot_llmreq/config/: config.py  parser.py
src/maibot_llmreq/model_client/: __init__.py  base_client.py  gemini_client.py  openai_client.py
src/maibot_llmreq/payload_content/: message.py  resp_format.py  tool_option.py
tests/: test_config_load.py  test_message.py  test_model_manager.py  test_tool_option.py
