[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "maibot-llmreq"
authors = [
    {name="Oct-autumn", email="octautumn2002@gmail.com"},
    {name="UnCLAS-Prommer"},
]
version = "0.1.0"
description = "Model API request library for MaiBot"
readme = "README.md"
requires-python=">=3.10"
license="MIT"
license-files=["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.dependencies]
pillow = "*"
loguru = "*"
pymongo = "*"
tomli = "*"
packaging = "*"
openai = "*"

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/MaiM-with-u/MaiBot-APIAdapter"

[tool.setuptools]
package-dir = {"" = "src"}